--- a/term1week6.ipynb
+++ b/term1week6.ipynb
@@ -343,7 +343,7 @@
    },
    "outputs": [],
    "source": [
-    "question1ic_answer = 3 # (delete, and fill in the value 1, 2, 3 or 4)\n",
+    "question1ic_answer = 3\n",
     "# YOUR CODE HERE\n"
    ]
   },
@@ -429,7 +429,7 @@
    },
    "outputs": [],
    "source": [
-    "question1id_answer = 2 # (delete, and fill in the value 1, 2, 3 or 4)\n",
+    "question1id_answer = 2\n",
     "# YOUR CODE HERE\n"
    ]
   },
@@ -512,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "question1ie_answer = 1 # (delete, and fill in the value 1, 2 or 3)\n",
+    "question1ie_answer = 1 \n",
     "# YOUR CODE HERE\n"
    ]
   },
@@ -595,7 +595,7 @@
    },
    "outputs": [],
    "source": [
-    "question1if_answer = 2 # (delete, and fill in the value 1, 2 or 3)\n",
+    "question1if_answer = 2 \n",
     "# YOUR CODE HERE\n"
    ]
   },
@@ -681,7 +681,7 @@
    },
    "outputs": [],
    "source": [
-    "question1ig_answer = 3 # (delete, and fill in the value 1, 2 or 3)\n",
+    "question1ig_answer = 3 \n",
     "# YOUR CODE HERE\n"
    ]
   },
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -911,13 +911,13 @@
    },
    "outputs": [],
    "source": [
-    "question1ih_answer = 4\n",
+    "question1ih_answer = 2\n",
     "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -935,14 +935,10 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'question1_i_h' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_24840\\1571406078.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 1 Mark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32massert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquestion1ih_answer\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mquestion1_i_h\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test case passed!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'question1_i_h' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test case passed!\n"
      ]
     }
    ],
@@ -1718,22 +1714,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "24"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "4^8\n"
+    "4^28\n",
+    "#really don't know"
    ]
   },
   {
@@ -1795,7 +1792,7 @@
     "print(q2ic_answer)\n",
     "print(q2id_answer)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "\n"
    ]
   },
   {
